--- a/VRChat/69/1264669.html
+++ b/VRChat/69/1264669.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "UTb9iSZS0ekMe1vfHrK6GogdEIXIhlhvCzNbhi1tP/g="></script>
+    "nJMTCRQgCcbIyFSa5HYJcfn0sFY7KlAK/g5ttfMZ10w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"黄色のボディーバッグ1.1","description":"革とキャンバス地を使用した、可愛らしくもちょっぴり大人っぽいボディーバッグ。\n\nギミックの全くないPrefabです。スケールを変更してお使いください。\n\nライセンス:\n○商用利用可\n○R18利用可\n○改造可\n×再配布不可\n\nΔ4916\n5マテリアル(Standard Specular)\nUnity Prefab\n\n[バージョン履歴]\n2019/03/08 Ver1.0 出品。\n2019/03/09 Ver1.1 ベルト部分のテクスチャ解像度を512から2048に変更。","url":"https://booth.pm/ja/items/1264669","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/4e9aebdb-2bc1-4157-9fe2-0dd58f8b8cc1/i/1264669/2bd573fa-9e06-4cf0-bb10-af2108b68333_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UTb9iSZS0ekMe1vfHrK6GogdEIXIhlhvCzNbhi1tP/g="></script>
+    nonce="nJMTCRQgCcbIyFSa5HYJcfn0sFY7KlAK/g5ttfMZ10w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -140,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +153,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -195,7 +195,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1264669/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               38
@@ -210,14 +210,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1264669/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               38
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
