--- a/VRChat/24/1263124.html
+++ b/VRChat/24/1263124.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/9XkHlnrtT/V7o9VxCz0oM5t14/sW12gdPy3ZVzG1wI="></script>
+    "59z//JPtMeglv4YW8cvf0PS3MMqHyBKMjl7pn7tcB/g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"まわしぐるま","description":"# 概要\nハムスターが中に入ってくるくる回るアレです。\nVRChatのワールドに置いてもらうことを想定しています。\n作者は以下のワールドに置いています。\n[Hamster cage](https://twitter.com/Whisky_shusuky/status/1019596161231908866)\n[Space mass cat](https://twitter.com/Whisky_shusuky/status/1102108185119219712)\n\nアニメーターが仕込んであり、端に立つとくるくる回りはじめます。VRC SDKがインストールされたプロジェクトにインポートして、vket_hamster_wheelのprefabをHierarchyに置けば動作します。\nジッサイに回る様子は上記の動画の43秒頃で確認できます。\n\nハムスター好き、子年生まれの人、ねずみさんなどなどにオススメです。\n\n\n# 利用規約\nMIT ライセンスになります。\n\nVRChatのワールド作成に使用することを想定して作成しましたがアバターに使っていただいても何に使って頂いても結構です！\n改変も自由ですし、改変したものを再配布するのも自由です！\n\n\n# その他\n使用された場合は作者のツイッターアカウント(@Whisky_shusuky)にメンションを飛ばして頂けたら嬉しいです。作者のモチベーションが湧きます。","url":"https://booth.pm/ja/items/1263124","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/4a07c950-ffd7-4204-88b0-affb6de12677/i/1263124/bb26fba9-06dd-4af8-b803-25de85455fc9_base_resized.jpg"}
     </script>
@@ -84,16 +84,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/9XkHlnrtT/V7o9VxCz0oM5t14/sW12gdPy3ZVzG1wI="></script>
+    nonce="59z//JPtMeglv4YW8cvf0PS3MMqHyBKMjl7pn7tcB/g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -121,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -135,7 +134,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1263124/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               44
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1263124/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               44
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
