--- a/VRChat/34/1264634.html
+++ b/VRChat/34/1264634.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "vyeY7kc+kS6ohYB0dl25vGHbcGoRbbCUfTSn5nMNprE="></script>
+    "qWsP/5StQvn87LKGGFuFANmWdVzUfIL70hpRW2+lqgE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【羽鳥ぽぽぽType】激カワ！レース鳩アバター(5種 x マフラー＆脚環3色)【￥８１０版】","description":"VR羽鳥鳩舎作出、バーチャル鳩tuber「羽鳥ぽぽぽ」を生み出した鳩舎が作出したバーチャルレース鳩のアバターです。\nみんなで鳩になろう！！\n\n【収録されている翼の柄】\n・灰二引き（B)\n・灰ごま（BC)\n・栗（R）\n・栗ごま（RC)\n・白（W)\n\n+各々にマフラー・脚環それぞれ3色のマテリアルが付いています。\n\n\n（※当モデルの売り上げおよびカンパはモデルの質の向上とvtuber羽鳥ぽぽぽの運営に充てられます）\n\n【仕様】\n・unity2017.4でunitypackage化されています。\n・そのままVRChatなどに持ち込めるポリゴン数です。\n・口パクもあります。\n・ただし、VRChat専用に作られたモデルではないので、ウェイトやリギングなど、色々と調子の悪い部分があります、必要に応じて鳩の面倒を見れる人推奨です。\n\n【規約】\n・テクスチャ等の素材を含む当モデル、またはその改変物の再配布、並びにデータを元に制作されたグッズなどの許可なき販売はかたくお断りいたします。\n・公序良俗に反する使用をしてはいけません。\n・「羽鳥ぽぽぽ」になりすますのはやめましょう。\n・鳩をいじめる目的で利用してはいけません。\n・レース鳩の普及に努めましょう。","url":"https://booth.pm/ja/items/1264634","offers":{"priceCurrency":"JPY","@type":"Offer","price":"810"},"image":"https://booth.pximg.net/c/620x620/d1def8d0-8300-4cb0-92c4-7d478075a721/i/1264634/6ac85b50-c6f4-404b-8800-f403787cd809_base_resized.jpg"}
     </script>
@@ -86,16 +86,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vyeY7kc+kS6ohYB0dl25vGHbcGoRbbCUfTSn5nMNprE="></script>
+    nonce="qWsP/5StQvn87LKGGFuFANmWdVzUfIL70hpRW2+lqgE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -133,7 +132,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -175,7 +175,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1264634/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               112
@@ -190,14 +190,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1264634/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               112
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
