--- a/VRChat/04/1264004.html
+++ b/VRChat/04/1264004.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "O1l0tnNpE2NXMer7oG0fu+Rd8j+M99x9zrtaw8GlXCU="></script>
+    "2cDQ5pZBSRS71HM+xkhCBR7XGXq0hvEY4GXHYj+MCvU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat対応]ボクセル ポンポン[Voxelモデル]","description":"・チアリーダーのあの子が使うポンポンをボクセルで立体化！\n・いろいろな子に持たせて応援しよう！\n\n・△4668ポリ(一個当たり)\n・Dynamicbone設定済みのプレハブ同梱\n・カラーバリエーション用のテクスチャを同梱\n・色改編のしやすいuv展開\n\n・下記の規約をお読みの上ご購入を願います\n・Unity用shader KKshader-Lit-simple が付属しています\n・KKshader-Lit-simpleについては次のURLからご確認ください\n  https://karasuma-kuro.booth.pm/items/1146743\n\n・画像に写っているチアリーダーモデルは別売です。以下のURLからご確認ください\nhttps://karasuma-kuro.booth.pm/items/1263999","url":"https://booth.pm/ja/items/1264004","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/6c72616e-1bae-4cce-bcc9-c341106fcced/i/1264004/4f465422-ea7b-423d-a0b8-48debbb4d154_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="O1l0tnNpE2NXMer7oG0fu+Rd8j+M99x9zrtaw8GlXCU="></script>
+    nonce="2cDQ5pZBSRS71HM+xkhCBR7XGXq0hvEY4GXHYj+MCvU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -144,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +157,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -199,7 +199,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1264004/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
@@ -214,14 +214,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1264004/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
