--- a/VRChat/74/1201274.html
+++ b/VRChat/74/1201274.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "MUHapoxmkCyKo2PGXEg66qynKLMfbwHWNN8JV7lNI74="></script>
+    "4PsoD3nDUg9pLqVmFOSjl6Tgv0zvOqny1SMCLk2NdZE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":" - 3Dオリジナルカスタムモデル  - ZENA -","description":"- オリジナル3Dカスタムモデル - ZENA -\n無機質で無垢なイメージのアンドロイドの子です。曲線を意識して出来るだけ美しく仕上げました。アップデートを記念して一時的に値下げを行っています。\n\nデフォルトShader:UnlitWF\n\n購入を検討される場合、アバターミュージアム２会場および電脳屋ワールド等で試着を行ってからの購入をお勧めします。\n\nUnityがある程度利用できる事、テクスチャ改変はGIMP、クリスタ等のペイントソフトがある程度使える事が前提に成っています。購入後の返金対応は出来ませんのでご注意ください。3、4番目はバーチャルマーケット２期間限定で販売されたバージョンのアップグレード用に購入されない様に価格をMAX状態にして有ります。絶対に購入したりはしない様お願いします。","url":"https://booth.pm/ja/items/1201274","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"8000","highPrice":"9999999"},"image":"https://booth.pximg.net/c/620x620/3923a6a5-7600-4cc2-9240-d92591e77ceb/i/1201274/5426e523-b71b-413d-936b-429bccf3a008_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="MUHapoxmkCyKo2PGXEg66qynKLMfbwHWNN8JV7lNI74="></script>
+    nonce="4PsoD3nDUg9pLqVmFOSjl6Tgv0zvOqny1SMCLk2NdZE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1201274/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               431
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1201274/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               431
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
